# text-classifier

./: pyproject.toml  text-classification.ipynb  yelp_labelled.txt
