[tool.poetry]
name = "text-classifier"
version = "0.1.0"
description = ""
authors = ["Osama-Yousef <osamawalidyousef@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^2.2.6"
numpy = "^1.19.1"
pandas = "^1.1.1"
matplotlib = "^3.3.1"
seaborn = "^0.10.1"
scikit-learn = "^0.23.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
